--- a/style.css
+++ b/style.css
@@ -1,68 +1,46 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #f4f4f4;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    margin: 0;
 }
 
-.chat-container {
-    width: 80%;
+h1 {
+    text-align: center;
+    color: #007bff;
+}
+
+.container {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 220px;
+    padding-left: 200px;
     border-radius: 5px;
-}
-
-.chat-header {
     text-align: center;
-    margin-bottom: 20px;
-    color: #007bff; /* Цвет заголовка чата */
 }
 
-.chat-messages {
-    max-height: 300px;
-    overflow-y: scroll;
-    border: 1px solid #ccc;
+input[type="text"],
+input[type="password"] {
+    width: 100%;
     padding: 10px;
-    border-radius: 5px;
-    background-color: #f9f9f9; /* Цвет фона сообщений */
-}
-
-.chat-messages ul {
-    list-style: none;
-    padding: 0;
-}
-
-.chat-input {
-    display: flex;
-    align-items: center;
-}
-
-.chat-input input[type="text"] {
-    flex: 1;
-    padding: 10px;
+    margin: 5px 0;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
-.chat-input button {
+button {
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: 10px;
+    margin-top: 10px;
 }
 
-/* Стили для сообщений */
-.chat-messages li {
-    background-color: #e5e5e5; /* Цвет фона сообщений */
-    padding: 5px;
-    margin-bottom: 5px;
-    border-radius: 5px;
+button:hover {
+    background-color: #0056b3;
 }
